--- a/gh-pages-worktree/index.html
+++ b/gh-pages-worktree/index.html
@@ -77,7 +77,7 @@
   <header class="hero" id="top">
     <div class="wrap" style="padding:4rem 1rem">
       <h1>Contact us</h1>
-      <p>Choose your industry and instantly see the right calendar for a VerSprite sales specialist.</p>
+      <p>Choose your industry and instantly see the right calendar for a VerSprite sales specialist</p>
       <a class="cta" href="#book" aria-label="Skip to booking form and calendar">Get Started</a>
     </div>
   </header>
